# ticket-to-ride-graphs

./: README.md  base_board_representation.json  current_board_state.json  graph-viewer.js  graph_representation.json  index.html  routes.json  styles.css  validate_board_state.py  validate_json.py  validate_routes.py
.devcontainer/: Dockerfile  devcontainer.json
algorithms/: CMakeLists.txt  main.cpp  path_output.json
algorithms/include/: adjacency_list.h  adjacency_list2.h  board_defs.h  route_list.h  utils.h  uuid.h
algorithms/include/algos/: bfs.h  bfs_ptr.h  dijkstra.h
algorithms/test/: bfs_basic.cpp  bfs_ptr.cpp  dijkstra.cpp
gui/: graph-viewer.js  index.html
